fix(spacing): spacing issues with ImageCard, list items, and cap… (#550)
* fix: do dont caption

* fix: caption spacing

* fix: image card spacing

* fix: nested content in list item spacing

* Update packages/gatsby-theme-carbon/src/components/ImageCard/image-card.scss


* fix: list item spacing

* fix: h4 spacing

* fix: remove test list content

--- a/packages/gatsby-theme-carbon/src/components/Caption/caption.scss
+++ b/packages/gatsby-theme-carbon/src/components/Caption/caption.scss
@@ -1,6 +1,6 @@
 .#{$prefix}--caption {
   @include carbon--type-style('body-short-01');
-  padding-top: $spacing-03;
+  padding-top: $spacing-05;
   --space: 0;
 }
 
